--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Raleway", "Arial", sans-serif;
   font-size: 14px;
-  line-height: 21px;
+  line-height: 20px;
   width: 901px;
   margin: 0 auto;
   }
@@ -9,11 +9,11 @@ body {
     display: block;
     max-width: 100%;
     height: auto;
-    margin-bottom: 30px;
+   margin-top: 105px;
+    margin-bottom:30px;
   }
   .container {
     width: 900px;
-    margin: 0px;
    }
 .main-menu a:hover {
  color: #03a9f4;
@@ -29,7 +29,6 @@ body {
    font-weight: 700;
    text-transform: uppercase;
    text-decoration: none;
-  margin-bottom: 105px;
   }
  
  .main-menu li:last-child {
@@ -50,8 +49,6 @@ body {
      overflow: hidden;
    }
    .main-content{
-    margin: 0;
-    padding: 0;
     font-size: 0;
   }
 
@@ -60,37 +57,30 @@ body {
     font-size: 12px;
     width: 420px;
     margin-right: 60px;
-    vertical-align: middle;
+    vertical-align: top;
   }
   .post:not(:nth-child(2n)){
     margin-right: 0px;
   }
 .description {
   color: #b4ad9e;
-  margin-bottom: 30px;
-  margin-top: 0px;
   text-transform: uppercase;
   font-size: 14px;
 }
 
 .article-title {
 color: #626262;
-margin-top: 0px;
 margin-bottom: 40px;
 font-size: 30px;
 font-weight: normal;  
 }
 .text {
   color: #626262;
-  margin-bottom: 135px;
-  margin-top: 0px;
   font-size: 14px;
-  line-height: 24px;
   text-align: justify;
+
 }
-.text:not(:nth-child(-n + 2)){
-    margin-bottom: 0px;
-}
+
 
 .load-more {
   display: block;
