--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -14,7 +14,9 @@ html {
       list-style: none;
     }
     a {
+      display: block;
       text-decoration: none;
+      color: black;
     }
     img {
       display: block;
@@ -44,24 +46,66 @@ html {
        .site-logo {
         float: left;
     }
+    section {
+      font-family: 'Roboto', sans-serif;
+    }
+    nav {
+      font-family: 'Open Sans', sans-serif;
+      font-size: 18px;
+      font-weight: 800;
+      line-height: 32px;
+      padding: 40px 0;
+      padding-bottom: 110px;
+      text-transform: uppercase;
+    }
+    .site-navigation{
+      float: right;
+    }
+    .site-navigation li:last-child{
+      margin-right: 0px;
+    }
        .site-navigation li{
-         float: right;
+         float:left;
          list-style: none;
+         margin-right: 35px;   
        }
        .site-navigation a:hover{
         color: #03a9f4;
        }
   .title {
+    color: #515151;
+    font-size: 48px;
+    font-weight:800;
+    line-height: 32px;
     text-align: center;
     text-transform: uppercase;
-    
+    margin-bottom: 130px;
+
+  } 
+  
+  .title::after{
+    display: block;
+    margin: 0 auto;
+    margin-top: 30px;
+    width: 160px;
+    height: 5px;
+    background-color: #1abc9c;
+    content: '';
+  } 
+  .cards {
+    padding-bottom: 100px;
   }
  .cards-item {
    float: left;
    margin-bottom: 30px;
    margin-right: 30px;
    height: 322px;
-
+ }
+ .cards-item:hover .item {
+  background-color:  #1abc9c;
+ }
+ .cards-item:hover .price {
+   background-color:#1abc9c ;
  }
 .cards-item:not(:nth-child(-n + 4)){
   margin-bottom: 0px;
@@ -77,7 +121,10 @@ html {
   background-color: #323232;
   text-align: center;
   text-transform: uppercase;
-
+  padding-top:6px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 32px;
 }
 .price {
   color: #fff;
@@ -87,12 +134,53 @@ html {
   width: 55px;
 text-align: center;
 text-transform: uppercase;
+padding-top: 14px;
 }
-.news-post {
-  width: 350px;
-
+.news{
+  font-family: 'Open Sans', sans-serif;
 }
 .post-item {
   float: left;
-  margin-right: 30px;
+  width: 350px;
+}
+.post-item:not(:last-child) {
+margin-right: 30px;
+}
+.image{
+  margin-bottom: 18px;
+}
+.description {
+  color: #555252;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 26px;
+  padding-bottom: 46px;
+}
+ .description::after {
+  display: block;
+    width: 160px;
+    height: 5px;
+    background-color: #1abc9c;
+    content: '';
+    margin-top: 16px;
+}
+.text{
+  color: #555252;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 26px;
+  margin-bottom: 20px;
+}
+.readmore{
+  font-size: 16px;
+  font-weight:300;
+  line-height: 26px;
+  width: 160px;
+  height: 50px;
+  position: absolute;
+  text-align: center;
+  color: #fff;
+  background-color: aqua;
+  border-radius: 3px;
+  padding-top: 12px;
 }
