--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -2,7 +2,6 @@ body {
   font-family: 'Playfair Display', serif;
   font-size: 14px;
   line-height: 20px;
-  width: 900px;
   margin: 0 auto;
   }
   img {
@@ -15,6 +14,7 @@ body {
   }
   .container {
     width: 900px;
+    margin: 0 auto;
    }
    a {
     display: block;
