--- a/html-css/module-06/css/style.css
+++ b/html-css/module-06/css/style.css
@@ -71,6 +71,7 @@ ul{
   color: #95e1d3 ;
   text-transform: uppercase;
   font-size: 14px;
+  transition: color 200ms linear;
 }
 
 
@@ -93,8 +94,6 @@ ul{
 }
 .nav-link:hover {
     color: #f38181;
-    transition: color 200ms linear;
-
 }
 
 
@@ -137,7 +136,7 @@ ul{
 
 .amazing-list{
   padding-bottom: 100px;
-  justify-content: center;
+  justify-content: space-around;
   flex-wrap: wrap;
  display: flex;
 
@@ -149,7 +148,7 @@ flex-basis: 300px;
 }
 
 .amazing-list-item:not(:nth-child(3n)){
-  margin-right: 66px;
+  margin-right: 60px;
 }
 
 .amazing-list-item:nth-child(-n + 3){
@@ -376,6 +375,7 @@ background-position: center;
 }
 
 .disc_footer{
+  padding: 5px;
   line-height: 24px;
   font-size: 15px;
   font-family: 'Roboto', sans-serif;
