--- a/html-css/module-07/css/style.css
+++ b/html-css/module-07/css/style.css
@@ -154,7 +154,6 @@ ul{
 }
 
 .nav-list-link{
-    
     text-transform: uppercase;
     font-weight: 700;
     line-height: 2.5619rem;
@@ -163,7 +162,6 @@ ul{
 }
 
 .nav-link:hover{
-    /* transition: color 500ms linear; */
     color: var(--main-color);
 }
 
@@ -277,6 +275,7 @@ ul{
 }
 
 .contact-form-btn{
+    cursor: pointer;
     color: #ffffff;
     font-weight: 800;
     text-transform: uppercase;
