--- a/html-css/module-10/css/style.css
+++ b/html-css/module-10/css/style.css
@@ -1,3 +1,5 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 /* kaushan-script-regular - latin */
 @font-face {
   font-family: 'Kaushan Script';
@@ -159,19 +161,22 @@
 }
 
 html {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .visually-hidden {
@@ -217,15 +222,23 @@ ul {
 
 /* navigation */
 .navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 130px;
 }
 
 .navigation__list {
   width: 490px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .navigation {
@@ -243,6 +256,8 @@ ul {
   color: var(--main-color);
   text-transform: uppercase;
   font-size: 14px;
+  -webkit-transition: color 200ms linear;
+  -o-transition: color 200ms linear;
   transition: color 200ms linear;
 }
 
@@ -256,6 +271,8 @@ ul {
   content: '';
   opacity: 0;
   visibility: hidden;
+  -webkit-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
   transition: all 200ms linear;
 }
 
@@ -271,13 +288,20 @@ ul {
 
 .navigation-wrapper {
   width: 690px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .navigation__icon {
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 90px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -291,6 +315,8 @@ ul {
 
 .header {
   padding-bottom: 230px;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(252, 227, 138, .8)), to(rgba(243, 129, 129, .8))), url(../img/bg/Orel15.png);
+  background: -o-linear-gradient(left, rgba(252, 227, 138, .8) 0%, rgba(243, 129, 129, .8) 100%), url(../img/bg/Orel15.png);
   background: linear-gradient(90deg, rgba(252, 227, 138, .8) 0%, rgba(243, 129, 129, .8) 100%), url(../img/bg/Orel15.png);
   background-size: cover;
   background-position: center;
@@ -376,23 +402,33 @@ ul {
 .title-wrapper {
   margin: 0 auto;
   width: 182px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 
 }
 
 .amazing__list {
   padding-bottom: 100px;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 
 }
 
 
 .amazing__list_item {
-  flex-basis: 300px;
+  -ms-flex-preferred-size: 300px;
+      flex-basis: 300px;
 }
 
 .amazing__list_item:not(:nth-child(3n)) {
@@ -437,11 +473,15 @@ background-image: url(../img/pseudo/HOME.png);
 
 
 .amazing__list_icon {
-  transform: translate(-150%, -10%);
+  -webkit-transform: translate(-150%, -10%);
+      -ms-transform: translate(-150%, -10%);
+          transform: translate(-150%, -10%);
   position: absolute;
   width: 32px;
   height: 32px;
   fill: #95e1d3;
+  -webkit-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
   transition: all 200ms linear;
 }
 
@@ -482,7 +522,11 @@ background-image: url(../img/pseudo/HOME.png);
 
 .cards {
   padding-bottom: 86px;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -529,17 +573,31 @@ background-image: url(../img/pseudo/HOME.png);
 
 
 .cards__item:hover .overlay {
+  -webkit-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
   transition: all 200ms linear;
-  box-shadow: 8px 10px 0px 1px rgb(149, 225, 211);
-  transform: translate(-2%, -2%);
+  -webkit-box-shadow: 8px 10px 0px 1px rgb(149, 225, 211);
+          box-shadow: 8px 10px 0px 1px rgb(149, 225, 211);
+  -webkit-transform: translate(-2%, -2%);
+      -ms-transform: translate(-2%, -2%);
+          transform: translate(-2%, -2%);
   visibility: visible;
 }
 
 .overlay__list {
   height: 470px;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -555,8 +613,14 @@ background-image: url(../img/pseudo/HOME.png);
 
 .overlay__list_link {
   background-color: rgb(252, 227, 138);
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 56px;
   height: 56px;
@@ -635,7 +699,11 @@ background-position: center;
 .footer {
   padding-bottom: 24px;
   padding-top: 30px;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -651,6 +719,8 @@ background-position: center;
 }
 
 .form-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -674,8 +744,10 @@ background-position: center;
   width: 226px;
 }
 
-@media (min-resolution: 192dpi) {
+@media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi) {
   .header {
+    background: -webkit-gradient(linear, left top, right top, from(rgba(252, 227, 138, .8)), to(rgba(243, 129, 129, .8))), url(../img/bg/Orel@2x.png);
+    background: -o-linear-gradient(left, rgba(252, 227, 138, .8) 0%, rgba(243, 129, 129, .8) 100%), url(../img/bg/Orel@2x.png);
     background: linear-gradient(90deg, rgba(252, 227, 138, .8) 0%, rgba(243, 129, 129, .8) 100%), url(../img/bg/Orel@2x.png);
   }
 
@@ -697,5 +769,3 @@ background-position: center;
     .amazing-list-item:nth-child(5)::before{
     background-image: url(../img/pseudo/HOME@2x.png);
     } */
-
-}
